crates/core/talkbank-parser/src/parser/chat_file_parser/single_item/tests/tests/snapshots/utterance_parsing_tests__error_space_instead_of_tab.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/utterance.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: TreeParsingError,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 0,
                        end: 13,
                    },
                    line: None,
                    column: None,
                },
                context: Some(
                    ErrorContext {
                        source_text: "*CHI: hello .",
                        span: Span {
                            start: 0,
                            end: 13,
                        },
                        expected: [],
                        found: "*CHI: hello .",
                        line_offset: None,
                    },
                ),
                labels: [],
                message: "Expected source_file root, got 'ERROR'",
                suggestion: None,
                help_url: Some(
                    "https://talkbank.org/errors/E330",
                ),
            },
        ],
    },
)
