crates/core/talkbank-parser/src/parser/chat_file_parser/single_item/tests/tests/snapshots/utterance_parsing_tests__simplest_success.snap
---
source: crates/talkbank-tree-sitter-parser/src/parser/chat_file_parser/single_item/tests/utterance.rs
assertion_line: 14
expression: result
---
Ok(
    Utterance {
        preceding_headers: [],
        main: MainTier {
            speaker: SpeakerCode(
                "CHI",
            ),
            content: TierContent {
                linkers: TierLinkers(
                    [],
                ),
                language_code: None,
                content: TierContentItems(
                    [
                        Word(
                            Word {
                                span: Span {
                                    start: 6,
                                    end: 11,
                                },
                                word_id: None,
                                raw_text: "hello",
                                content: WordContents(
                                    [
                                        Text(
                                            WordText(
                                                NonEmptyString(
                                                    "hello",
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                                category: None,
                                form_type: None,
                                lang: None,
                                part_of_speech: None,
                                inline_bullet: None,
                                cached_cleaned_text: CachedStr(
                                    OnceLock(
                                        <uninit>,
                                    ),
                                ),
                            },
                        ),
                    ],
                ),
                terminator: Some(
                    Period {
                        span: Span {
                            start: 12,
                            end: 13,
                        },
                    },
                ),
                postcodes: TierPostcodes(
                    [],
                ),
                bullet: None,
                content_span: Some(
                    Span {
                        start: 5,
                        end: 14,
                    },
                ),
            },
            span: Span {
                start: 0,
                end: 14,
            },
            speaker_span: Span {
                start: 1,
                end: 4,
            },
        },
        dependent_tiers: [],
        alignments: None,
        alignment_diagnostics: [],
        parse_health: Clean,
        utterance_language: Uncomputed,
        language_metadata: Uncomputed,
    },
)
